--- a/css/style.css
+++ b/css/style.css
@@ -4391,6 +4391,21 @@ body {
   .panel-open .panel-noti__btn {
     max-width: 412px;
   }
+
+  .dashboard_title {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+
+  .last_btn {
+    margin-right: 0 !important;
+  }
+
+  .admin__h2_1 {
+    margin-bottom: 15px;
+  }
 }
 
 @media (max-width: 575px) {
@@ -4410,6 +4425,11 @@ body {
 
   .panel-open .panel-noti__btn {
     max-width: 100%;
+  }
+
+  .blue__button {
+    padding: 14px 25px;
+    font-size: 12px;
   }
 }
 
