--- a/css/style.css
+++ b/css/style.css
@@ -3831,6 +3831,137 @@ body {
   font-size: 12px;
 }
 
+.portfolio-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding-right: 50px;
+  margin-bottom: 30px;
+}
+
+.portfolio-wrapper .admin__h2 {
+  margin-bottom: 0;
+}
+
+.portfolio-wrapper__top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.portfolio-wrapper__top select {
+  width: 92px;
+  margin-right: 22px;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-image: url("../images/custom/arrow-down.png");
+  background-repeat: no-repeat;
+  background-position-y: 50%;
+  background-position-x: 86%;
+  text-align: left;
+  padding: 0 25px;
+}
+
+.portfolio-wrapper__top select option {
+  color: #000;
+}
+
+.portfolio-wrapper__top p {
+  font-size: 12px;
+  color: #393939;
+}
+
+.c2-container {
+  display: none !important;
+}
+
+.circle-block {
+  width: 170px;
+}
+
+.data-wrapper {
+  position: relative;
+  width: 170px;
+}
+
+.data-wrapper img {
+  position: absolute;
+}
+
+.data-calendar {
+  top: 10px;
+  left: 10px;
+}
+
+.data-arrow {
+  top: 18px;
+  right: 10px;
+}
+
+.portfolio__select {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-image: url("../images/custom/arrow-down.png");
+  background-repeat: no-repeat;
+  background-position-y: 50%;
+  background-position-x: 86%;
+}
+
+.portfolio__select option {
+  color: #000;
+}
+
+.history-row-info .sum {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.history-row-info .sum img {
+  display: block;
+  margin-right: 17px;
+}
+
+.date {
+  color: #4F4F4F;
+  font-size: 9px;
+  display: block;
+  font-family: a-b;
+}
+
+.table-btn {
+  width: 213px;
+  color: #fff;
+  padding: 8px 15px;
+  border-radius: 40px;
+  border: none;
+  outline: none;
+  height: 34px;
+  font-size: 12px;
+}
+
+.btn-green {
+  background: #27AE60;
+}
+
+.btn-orange {
+  background: #F8BE1F;
+}
+
 @media (max-width: 1765px) {
   .category.sign-category {
     margin-bottom: -86px !important;
@@ -4546,6 +4677,17 @@ body {
 
   .profile-table {
     width: 500px;
+  }
+
+  .portfolio-wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+
+  .portfolio-wrapper .admin__h2 {
+    margin-bottom: 20px;
   }
 }
 
