--- a/precss/style.scss
+++ b/precss/style.scss
@@ -28,7 +28,7 @@
     text-decoration: none;
     list-style: none;
     font-family: a-r;
-    color: #fff
+    color: #fff;
 }
 
 .overlay {
@@ -4462,4 +4462,111 @@ body {
             font-size: 12px;
         }
     }
+}
+.portfolio{
+    &-wrapper{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding-right: 50px;
+        margin-bottom: 30px;
+        @include _767-block{
+            flex-direction: column;
+        }
+        .admin__h2{
+            margin-bottom: 0;
+            @include _767-block{
+                margin-bottom: 20px;
+            }
+        }
+        &__top{
+            display: flex;
+            align-items: center;
+            select{
+                width: 92px;
+                margin-right: 22px;
+                appearance: none;
+                -webkit-appearance: none;
+                -moz-appearance: none;
+                background-image: url('../images/custom/arrow-down.png');
+                background-repeat: no-repeat;
+                background-position-y: 50%;
+                background-position-x: 86%;
+                text-align: left;
+                padding: 0 25px;
+                option{
+                    color: #000;
+                }
+            }
+            p{
+                font-size: 12px;
+                color: #393939;
+            }
+        }
+    }
+}
+.c2-container{
+    display: none !important;
+}
+.circle-block{
+    width: 170px;
+}
+.data{
+    &-wrapper{
+        position: relative;
+        width: 170px;
+        img{
+            position: absolute;
+        }
+    }
+    &-calendar{
+        top: 10px;
+        left: 10px;
+    }
+    &-arrow{
+        top: 18px;
+        right: 10px;
+    }
+}
+.portfolio__select{
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image: url('../images/custom/arrow-down.png');
+    background-repeat: no-repeat;
+    background-position-y: 50%;
+    background-position-x: 86%;
+    option{
+        color: #000;
+    }
+}
+.history-row-info .sum{
+    display: flex;
+    align-items: center;
+    img{
+        display: block;
+        margin-right: 17px;
+    }
+}
+.date{
+    color: #4F4F4F;
+    font-size: 9px;
+    display: block;
+    font-family: a-b;
+}
+.table-btn{
+    width: 213px;
+    color: #fff;
+    padding: 8px 15px;
+    border-radius: 40px;
+    border: none;
+    outline: none;
+    height: 34px;
+    font-size: 12px;
+}
+.btn-green{
+    background: #27AE60;
+}
+.btn-orange{
+    background: #F8BE1F;
 }
