--- a/precss/style.scss
+++ b/precss/style.scss
@@ -4570,3 +4570,138 @@ body {
 .btn-orange{
     background: #F8BE1F;
 }
+.btn-width-small{
+    width: 96px;
+}
+.btn-blue{
+    background: #0058C3;
+    span{
+        font-size: 10px;
+        margin-left: 3px;
+    }
+}
+.overall{
+    display: flex;
+    align-items: center;
+    img{
+        margin: 0 10px;
+    }
+}
+.recall-btn .table-btn{
+    width: 250px;
+}
+.recall-btn .history-row td:last-child{
+    padding-left: 70px;
+    padding-right: 0;
+}
+.users{
+
+    margin-top: 15px;
+    .portfolio-wrapper__top{
+        max-width: 353px;
+        width: 100%;
+        justify-content: space-between;
+    }
+    &-btn{
+        max-width: 146px;
+        width: 100%;
+        color: #5252DD;
+        border: 1px solid #5252DD;
+        background: #fff;
+        height: 42px;
+        border-radius: 40px;
+        font-size: 15px;
+        font-weight: 700;
+        &__white {
+            margin-right: 15px;
+        }
+        &__blue{
+            max-width: 180px;
+            background: #5252DD;
+            color: #fff;
+        }
+    }
+
+    &-date{
+        display: flex;
+        align-items: center;
+        img{
+            margin-right: 10px;
+        }
+    }
+}
+@include _575-block{
+    .users{
+        padding-right: 20px;
+    }
+}
+.crypto{
+    &-btn{
+        width: 69px;
+        height: 42px;
+        border-radius: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+    }
+}
+.binance{
+    &-table{
+        margin-bottom: 30px;
+    }
+    &-pagination{
+        max-width: 460px;
+        display: flex;
+        margin-bottom: 40px;
+        height: 43px;
+        border: 1px solid rgba(11, 30, 69, 0.2);
+        border-radius: 40px;
+        overflow: hidden;
+        @include _575-block{
+            margin-left: -15px;
+        }
+    }
+    &-btn{
+        color: #000;
+        font-weight: 700;
+        font-size: 12px;
+        background: #FFFFFF;
+        border: 1px solid rgba(11, 30, 69, 0.2);
+        height: 44px;
+        border-radius: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: -20px;
+        position: relative;
+        width: 62px;
+        bottom: 1px;
+        z-index: 3;
+    }
+    &-active{
+        background: #5252DD;
+        color: #fff;
+    }
+    &-prev,
+    &-next{
+        border: none;
+        z-index: 1;
+    }
+    &-prev{
+        margin: 0 5px;
+        justify-content: flex-start;
+        position: relative;
+        img{
+            position: absolute;
+            left: 15px;
+        }
+    }
+    &-next{
+        position: relative;
+        img{
+            position: absolute;
+            right: 15px;
+        }
+    }
+}
